// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkDropdownChip should render correctly 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--default"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.572 1.572 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDropdownChip should render correctly with a "className" attribute 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--default custom-class"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.572 1.572 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDropdownChip should render correctly with type="default" 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--default"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.572 1.572 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDropdownChip should render correctly with type="default" and a leading accessory view 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--default"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-chip__leading-accessory-view"
    >
      <span>
        Leading
      </span>
    </span>
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.572 1.572 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDropdownChip should render correctly with type="default" and disabled 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--default bpk-chip--disabled bpk-chip--default-disabled"
    disabled=""
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.572 1.572 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDropdownChip should render correctly with type="default" and selected 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="bpk-chip bpk-chip--default bpk-chip--default-selected"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.572 1.572 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDropdownChip should render correctly with type="default", selected and disabled 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="bpk-chip bpk-chip--default bpk-chip--disabled bpk-chip--default-disabled"
    disabled=""
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.572 1.572 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDropdownChip should render correctly with type="onDark" 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--onDark"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.572 1.572 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDropdownChip should render correctly with type="onDark" and a leading accessory view 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--onDark"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-chip__leading-accessory-view"
    >
      <span>
        Leading
      </span>
    </span>
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.572 1.572 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDropdownChip should render correctly with type="onDark" and disabled 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--onDark bpk-chip--disabled bpk-chip--onDark-disabled"
    disabled=""
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.572 1.572 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDropdownChip should render correctly with type="onDark" and selected 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="bpk-chip bpk-chip--onDark bpk-chip--onDark-selected"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.572 1.572 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDropdownChip should render correctly with type="onDark", selected and disabled 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="bpk-chip bpk-chip--onDark bpk-chip--disabled bpk-chip--onDark-disabled"
    disabled=""
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.572 1.572 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDropdownChip should render correctly with type="onImage" 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--onImage"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.572 1.572 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDropdownChip should render correctly with type="onImage" and a leading accessory view 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--onImage"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-chip__leading-accessory-view"
    >
      <span>
        Leading
      </span>
    </span>
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.572 1.572 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDropdownChip should render correctly with type="onImage" and disabled 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--onImage bpk-chip--disabled bpk-chip--onImage-disabled"
    disabled=""
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.572 1.572 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDropdownChip should render correctly with type="onImage" and selected 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="bpk-chip bpk-chip--onImage bpk-chip--onImage-selected"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.572 1.572 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDropdownChip should render correctly with type="onImage", selected and disabled 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="bpk-chip bpk-chip--onImage bpk-chip--disabled bpk-chip--onImage-disabled"
    disabled=""
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        height="18"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.572 1.572 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;
